--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#services">Que Hacemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Codigo de Conducta</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Código de Conducta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
           </li>
         </ul>
       </div>
@@ -58,26 +58,44 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">R en el Nea Argentina</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Somos un Grupo de Usuarios de R en el NEA Argentina </p>
+          <p class="text-white-75 font-weight-light mb-5">Somos un Grupo de Usuarios de R en el NEA</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Adelante!</a>
         </div>
       </div>
     </div>
   </header>
 
-  <!-- About Section -->
+  <!--Quines Somos -->
   <section class="page-section bg-primary" id="about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">Nosotros</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <p class="text-white-50 mb-4">
+Quiénes Somos
+Misión
+
+Este grupo surge con la misión de conectar a les usuaries de R en la ciudad de Rosario, Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
+Visión
+
+Creamos esta comunidad con el ideal de brindar un espacio social activo e inclusivo, cuyes integrantes se encuentren predispuestos a trabajar en forma colaborativa y constructiva, compartiendo conocimientos e intercambiando opiniones en forma respetuosa y con la finalidad común de ampliar y promover el uso de R en diversas disciplinas que puedan sacar partido de las herramientas que dicho software libre provee.
+Objetivos
+
+    Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.
+    Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.
+    Participar en la creciente comunidad global de usuaries de R, mediante la asistencia a reuniones y/o congresos a nivel nacional e internacional.
+    Impulsar y ejecutar proyectos de análisis de datos con R que ayuden a la construcción de conocimiento y propendiendo a las buenas prácticas en el uso de la estadística.
+    Organizar, patrocinar y promover cursos, congresos o reuniones para divulgar el uso de R, impartir conocimiento y mostrar los avances y resultados obtenidos mediante su aplicación.
+    Expandir la base de conocimientos para hacerla accesible en idioma español. Los datos y los análisis de datos son una forma de conocimiento.
+    Contribuir activamente al desarrollo de herramientas de R como modo de aprendizaje y de participación en la comunidad global.
+
+</p>
+    <!--      <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>  -->
         </div>
       </div>
     </div>
