--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
+  <!-- Barra de Navegación -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">R en el NEA</a>
@@ -53,12 +53,12 @@
     </div>
   </nav>
 
-  <!-- Masthead -->
+  <!-- Home -->
   <header class="masthead">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">R en el Nea Argentina</h1>
+          <h2 class="text-uppercase text-white font-weight-bold">R en el Nea-Argentina</h2>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -77,14 +77,15 @@
           <h2 class="text-white mt-0">Nosotros</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">
-Quiénes Somos
-Misión
+
+<p> Misión </p>
 
 Este grupo surge con la misión de conectar a les usuaries de R en la ciudad de Rosario, Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
 Visión
 
 Creamos esta comunidad con el ideal de brindar un espacio social activo e inclusivo, cuyes integrantes se encuentren predispuestos a trabajar en forma colaborativa y constructiva, compartiendo conocimientos e intercambiando opiniones en forma respetuosa y con la finalidad común de ampliar y promover el uso de R en diversas disciplinas que puedan sacar partido de las herramientas que dicho software libre provee.
-Objetivos
+
+<h3>Objetivos </h3>
 
     Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.
     Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.
