--- a/index.html
+++ b/index.html
@@ -78,22 +78,15 @@
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">
 
-<p> Misión </p>
+<h3> Misión </h3>
 
-Este grupo surge con la misión de conectar a les usuaries de R en la ciudad de Rosario, Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
-Visión
+Este grupo surge con la misión de conectar a les usuarios de R en la ciudadades Correntes, Resistencia, Posadas y Formosa de Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
+
+ <h3>Visión</h3>
 
 Creamos esta comunidad con el ideal de brindar un espacio social activo e inclusivo, cuyes integrantes se encuentren predispuestos a trabajar en forma colaborativa y constructiva, compartiendo conocimientos e intercambiando opiniones en forma respetuosa y con la finalidad común de ampliar y promover el uso de R en diversas disciplinas que puedan sacar partido de las herramientas que dicho software libre provee.
 
-<h3>Objetivos </h3>
 
-    Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.
-    Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.
-    Participar en la creciente comunidad global de usuaries de R, mediante la asistencia a reuniones y/o congresos a nivel nacional e internacional.
-    Impulsar y ejecutar proyectos de análisis de datos con R que ayuden a la construcción de conocimiento y propendiendo a las buenas prácticas en el uso de la estadística.
-    Organizar, patrocinar y promover cursos, congresos o reuniones para divulgar el uso de R, impartir conocimiento y mostrar los avances y resultados obtenidos mediante su aplicación.
-    Expandir la base de conocimientos para hacerla accesible en idioma español. Los datos y los análisis de datos son una forma de conocimiento.
-    Contribuir activamente al desarrollo de herramientas de R como modo de aprendizaje y de participación en la comunidad global.
 
 </p>
     <!--      <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>  -->
@@ -102,40 +95,26 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
     </div>
   </section>
 
-  <!-- Services Section -->
+  <!-- Que Hacemos -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0">At Your Service</h2>
+      <h2 class="text-center mt-0">Que Hacemos?</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sturdy Themes</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+      <h3>Objetivos </h3>
+
+    Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.
+    Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.
+    Participar en la creciente comunidad global de usuaries de R, mediante la asistencia a reuniones y/o congresos a nivel nacional e internacional.
+    Impulsar y ejecutar proyectos de análisis de datos con R que ayuden a la construcción de conocimiento y propendiendo a las buenas prácticas en el uso de la estadística.
+    Organizar, patrocinar y promover cursos, congresos o reuniones para divulgar el uso de R, impartir conocimiento y mostrar los avances y resultados obtenidos mediante su aplicación.
+    Expandir la base de conocimientos para hacerla accesible en idioma español. Los datos y los análisis de datos son una forma de conocimiento.
+    Contribuir activamente al desarrollo de herramientas de R como modo de aprendizaje y de participación en la comunidad global.
+          
           </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-          </div>
-        </div>
       </div>
     </div>
   </section>
