--- a/index.html
+++ b/index.html
@@ -103,131 +103,46 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
       <h3>Objetivos </h3>
 
-    Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.
-    Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.
-    Participar en la creciente comunidad global de usuaries de R, mediante la asistencia a reuniones y/o congresos a nivel nacional e internacional.
-    Impulsar y ejecutar proyectos de análisis de datos con R que ayuden a la construcción de conocimiento y propendiendo a las buenas prácticas en el uso de la estadística.
-    Organizar, patrocinar y promover cursos, congresos o reuniones para divulgar el uso de R, impartir conocimiento y mostrar los avances y resultados obtenidos mediante su aplicación.
-    Expandir la base de conocimientos para hacerla accesible en idioma español. Los datos y los análisis de datos son una forma de conocimiento.
-    Contribuir activamente al desarrollo de herramientas de R como modo de aprendizaje y de participación en la comunidad global.
-          
+    <ol>
+<li>Fomentar el uso del lenguaje de programación R en todas sus vertientes y ámbitos de aplicación, de manera colaborativa, mediante la enseñanza y el aprendizaje continuo.</li>
+<li>Facilitar el intercambio de enfoques, técnicas de programación y uso general del software mediante la realización periódica de reuniones presenciales y/o virtuales y el uso de los distintos canales de comunicación, permitiendo la integración de todes les integrantes con intereses en R complementarios.</li>
+<li>Participar en la creciente comunidad global de usuaries de R, mediante la asistencia a reuniones y/o congresos a nivel nacional e internacional.</li>
+<li>Impulsar y ejecutar proyectos de análisis de datos con R que ayuden a la construcción de conocimiento y propendiendo a las buenas prácticas en el uso de la estadística.</li>
+<li>Organizar, patrocinar y promover cursos, congresos o reuniones para divulgar el uso de R, impartir conocimiento y mostrar los avances y resultados obtenidos mediante su aplicación.</li>
+<li>Expandir la base de conocimientos para hacerla accesible en idioma español. Los datos y los análisis de datos son una forma de conocimiento.</li>
+<li>Contribuir activamente al desarrollo de herramientas de R como modo de aprendizaje y de participación en la comunidad global.</li>
+</ol>
        
     </div>
   </section>
 
-  <!-- Portfolio Section -->
-  <section id="portfolio">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Call to Action Section -->
+ 
+  <!-- Codigo de Conducta -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+      <h2 class="mb-4">R en el Nea</h2>
+      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">R ya!</a>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contactos -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Let's Get In Touch!</h2>
+          <h2 class="mt-0">Nuestros Contactos</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
-        </div>
+          </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
+          <div> +54 3794 112233</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:renelNea@gmail.com">renelNea@gmail.com</a>
         </div>
       </div>
     </div>
@@ -236,7 +151,7 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2020 - R en el NEA</div>
     </div>
   </footer>
 
