--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
   <!-- Codigo de Conducta -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4">R en el Nea</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">R ya!</a>
+      <h2 class="mb-4">Código de Conducta</h2>
+      
     </div>
   </section>
 
