--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
       <h2 class="text-center mt-0">Que Hacemos?</h2>
       
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+          <!--  <i class="fas fa-4x fa-gem text-primary mb-4"></i>  -->
       <h3>Objetivos </h3>
 
     <ol>
