--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
  
   <!-- Codigo de Conducta -->
   <section class="page-section bg-dark text-white" id="portfolio">
-    <div class="container text-center">
+    <div class="container">
       <h2 class="mb-4">Código de Conducta</h2>
       
      <p> La comunidad de R en el NEA, incluyendo sus representantes, deben conocer y seguir este <strong>Código de Conducta</strong> (basado en el <a href="https://wiki.r-consortium.org/view/R_Consortium_and_the_R_Community_Code_of_Conduct">Código de Conducta de R Community)</a> que es establecido con la finalidad de alentar al crecimiento de esta comunidad, participando en un ambiente amigable, partiendo de la base del respeto mutuo.</p>
