--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
-          <h2 class="text-white mt-0">Nosotros</h2>
+          <h2 class="text-white text-center mt-0">Nosotros</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">
 
