--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:renelNea@gmail.com">renelNea@gmail.com</a>
         </div>
+        <div class="col-lg-4 mr-auto text-center">
+          <i class="fas fa-twitter fa-3x mb-3 text-muted"></i>
+          <!-- Make sure to change the email address in anchor text AND the link below! -->
+          <a class="d-block" href="https://twitter.com/NeaRenel">@NeaRenel</a>
+        </div>
       </div>
     </div>
   </section>
