--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div> +54 3794 112233</div>
+          <i class="fas fa-github fa-3x mb-3 text-muted"></i>
+          <a class="d-block" href="https://github.com/RenelNEA">@RenelNea</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
