--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <h3> Misión </h3>
 
-Este grupo surge con la misión de conectar a les usuarios de R en la ciudadades Corrientes, Resistencia, Posadas y Formosa de Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
+Este grupo surge con la misión de conectar a les usuarios de R en las provincias de Corrientes, Chaco, Misiones y Formosa de Argentina, independientemente de su grado de conocimiento sobre el software y el ámbito de aplicación del mismo. Pretendemos promover el uso del lenguaje de programación R, apoyar el desarrollo de esta comunidad de usuaries para compartir experiencias, promover el aprendizaje continuo y favorecer la creación de proyectos interdisciplinarios.
 
 </p>
   <p class="text-white-50 mb-4">      
