--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
+          <img class="img-fluid" src="img/logo.png" alt="">
           <h2 class="text-uppercase text-white font-weight-bold">R en el Nea-Argentina</h2>
           <hr class="divider my-4">
         </div>
