--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+          <img class="img-fluid" src="img/RConsortium_Vertical_Pantone.png" alt="">
           <a class="d-block" href="https://www.r-consortium.org/"></a>
         </div>
     
