--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Nuestros sponsorss</h2>
+          <h2 class="mt-0">Nuestros sponsors</h2>
           <hr class="divider my-4">
           </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <img class="img-fluid" src="img/RConsortium_Vertical_Pantone.png" alt="">
+          <img class="img-center" src="img/RConsortium_Vertical_Pantone.png" alt="">
           <a class="d-block" href="https://www.r-consortium.org/"></a>
         </div>
     </div>
