--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@ Creamos esta comunidad con el ideal de brindar un espacio social activo e inclus
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <img class="img-fluid" src="img/RConsortium_Vertical_Pantone.png" alt="Rconsortium">
-          <a class="d-block" href="https://www.r-consortium.org/"></a>
+          
+          <a href="https://www.r-consortium.org/"><img class="img-fluid" src="img/RConsortium_Vertical_Pantone.png" alt="Rconsortium"></a>
         </div>
     </div>
     </div>
